deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: flask-svc
  name: flask-svc
  namespace: applications
spec:
  ports:
  - name: "80"
    port: 80
    targetPort: 8080
  selector:
    app: flask
